tests/build/fixtures/valid-project/src/main/java/com/example/App.java
package com.example;

/**
 * Valid application for build testing.
 */
public class App {

    public static void main(String[] args) {
        System.out.println("Hello from valid app!");
    }

    public String getMessage() {
        return "Hello";
    }
}
